--- a/JAR/JAR.CSharp.csproj
+++ b/JAR/JAR.CSharp.csproj
@@ -52,9 +52,6 @@
     <Reference Include="UnityEngine">
       <HintPath>Library\UnityAssemblies\UnityEngine.dll</HintPath>
     </Reference>
-    <Reference Include="UnityEngine.Advertisements">
-      <HintPath>Library\UnityAssemblies\UnityEngine.Advertisements.dll</HintPath>
-    </Reference>
     <Reference Include="UnityEngine.UI">
       <HintPath>Library\UnityAssemblies\UnityEngine.UI.dll</HintPath>
     </Reference>
@@ -69,9 +66,6 @@
     </Reference>
     <Reference Include="UnityEngine.HoloLens">
       <HintPath>Library\UnityAssemblies\UnityEngine.HoloLens.dll</HintPath>
-    </Reference>
-    <Reference Include="UnityEngine.Purchasing">
-      <HintPath>Library\UnityAssemblies\UnityEngine.Purchasing.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine.VR">
       <HintPath>Library\UnityAssemblies\UnityEngine.VR.dll</HintPath>
@@ -89,6 +83,8 @@
   <ItemGroup>
     <Compile Include="Assets\Scripts\CameraControlScript.cs" />
     <Compile Include="Assets\Scripts\ChildObjectList.cs" />
+    <Compile Include="Assets\Scripts\Manager\GameSceneManager.cs" />
+    <Compile Include="Assets\Scripts\Manager\ManagerController.cs" />
     <Compile Include="Assets\Scripts\Manager\ManagerTemplate.cs" />
     <Compile Include="Assets\Scripts\PlayerControllerScripts.cs" />
   </ItemGroup>
